# Deposit

./: .env.example  .replit  Dockerfile  camels_calculations.py  camels_engine.py  create_sample_data.py  database.py  deposit_classification.py  docker-compose.yml  main.py  middleware.py  ml_training.py  models.py  nlp_compliance.py  penalty_engine.py  premium_management.py  pyproject.toml  replit.md  returns_validation.py  risk_analysis.py  single_customer_view.py
app/schemas/: premiums.py  returns.py  scv.py
app/services/: anomaly_detection.py  balance_aggregation_service.py  bank_failure_predictor.py  compliance_tracker.py  data_storage_service.py  deposit_analysis_service.py  deposit_register_service.py  executive_dashboard_service.py  exposure_calculation_service.py  integration_service.py  invoicing_service.py  (+15 more)
attached_assets/: DEPOSIT_INSURANCE_SYSTEM_ENQUIRY[1]_1760856640010.docx
data/: app.db
ml_models/: anomaly_detector.pkl  failure_model.pkl  metadata.pkl  pd_model.pkl  scaler.pkl
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: audit_trail.html  bank_detail.html  bank_risk_analysis.html  banks.html  base.html  calculate_camels.html  camels.html  camels_detail.html  dashboard.html  deposit_analyses.html  deposit_analysis_detail.html  early_warning_signal_detail.html  early_warning_signals.html  index.html  institution_detail.html  institutions.html  invoice_detail.html  invoices.html  locked.html  login.html  payment_detail.html  payments.html  premium_calculation_detail.html  premium_calculations.html  premium_penalties.html  premium_penalty_detail.html  premiums.html  return_detail.html  return_period_detail.html  return_periods.html  return_upload_details.html  return_upload_validation_report.html  return_upload_validation_results.html  returns.html  risk_analysis.html  risk_detail.html  scv.html  scv_register_detail.html  scv_simulation_detail.html  scv_upload.html  (+12 more)
