[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.3",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.1",
    "requests>=2.32.3",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "scipy>=1.13.0",
    "sqlalchemy>=2.0.30",
    # Database drivers (optional, chosen by DATABASE_URL)
    "psycopg2-binary>=2.9.9; platform_system != 'Windows'",
    "mysql-connector-python>=8.3.0",
    "pymysql>=1.1.1",
    # Caching/search optional libs used in services
    "redis>=5.0.4",
    "elasticsearch>=8.13.0",
    "aiohttp>=3.9.5",
    # Report generation
    "reportlab>=4.1.0",
]

[tool.setuptools]
packages = ["app"]